--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ serde_derive = "1"
 wasm-bindgen = "0.2.58"
 web_logger = "0.2"
 yew = { version = "0.13", features = ["web_sys"] }
+anyhow = "1.0.27"
 
 # `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
 # compared to the default allocator's ~10K. It is slower than the default
@@ -29,4 +30,5 @@ wasm-bindgen-test = "0.3"
 version = "0.3.4"
 features = [
   'KeyboardEvent',
+  'TcpSocket'
 ]
